# imsense

./: build.sh
aftest/: .main.cpp.swp  CMakeLists.txt  README  main.cpp
assembler/code/afCudaTests/: .cproject  .project  CMakeLists.txt  main.cpp  track.cpp  track.h
assembler/code/cvbgs/: main.cpp  track.cpp  track.h
assembler/code/pyTemMatch/: dynamic_cspace.py  result_fig9.xcf  sandia_chiplet.py
assembler/code/pybgs/: helpers.py  mogbgs.py
fiber_search/: CMakeLists.txt  findpath.cpp  findpath.h  helper.cpp  helper.h  main.cpp  se3graph.cpp  se3graph.h  se3metrics.cpp  se3metrics.h  state.cpp  state.h
fiber_search/data/: 20mm_Calibration_Box.stl  20mm_Calibration_Box_moved.stl  20mm_Calibration_Box_supersmall.stl  Entry_02_small.stl  example.txt  tool-vox-no-tip_new.stl
fiber_search/data/example1/: fibers-0.csv  fibers-1.csv  fibers-2.csv  fibers-3.csv  fibers-4.csv  fibers-5.csv  fibers-6.csv  fibers-7.csv  fibers-8.csv  fibers-9.csv  tool-orig.stl
fiber_search/data/example2/fiber0/: fibers-0.txt
fiber_search/data/example2/fibers-txt/: fibers-0.txt  fibers-1.txt  fibers-2.txt  fibers-3.txt  fibers-4.txt  fibers-5.txt  fibers-6.txt  fibers-7.txt  fibers-8.txt  fibers-9.txt
fiber_search/data/example2/tool-stl/: tool-vox-no-tip.stl  tool-vox-no-tip2.stl  tool-vox-no-tip3.stl  tool-vox.stl
fiber_search/data/example3/: disloc-vox.stl
fiber_search/data/example3/new/: fibers-0.txt  tool-orig.stl  tool-vox-no-tip.stl  tool-vox.stl
fiber_search/data/original/: tool-orig.stl
gvdb-af/: CMakeLists.txt  README.txt  app.cpp  app.h  build.sh  interop.cpp  interop.h
kernel/: CMakeLists.txt  main.cpp
kernel/include/af/: version.h
kernel/lib/debug_help/: CMakeLists.txt  logcf.cpp  logcf.h  timestamp.cpp  timestamp.h
kernel/lib/json/json/: CMakeLists.txt
laplaceigen/: laplaceigen.py  simplicial.py
motion_planning/: CMakeLists.txt  findpath.cpp  findpath.h  helper.cpp  helper.h  main.cpp  state.h
motion_planning/data/: goal_states.txt  penny_bottle_opener.stl
spatial/: CMakeLists.txt  helper.cpp  helper.h  main.cpp  ufabRV.cpp  ufabRV.h
spatial/rotations/: ISOI_SO3_grid.tgz  SO3_sampling
spatial/rotations/SO3_grid/: grid_generation.h  grid_s1.C  hopf2quat.C  layered_grid.C  main.C  makefile  simple_grid.C
spatial/shapes/: Part2.binvox  Part220.binvox  Part250.binvox  Part256.binvox  Part2_1.binvox  Tool100.binvox  Tool120.binvox  Tool150.binvox  ToolHeadAssembly.binvox  ToolHeadAssembly_1.binvox
supports/: CMakeLists.txt  CMakeLists.txt~  computeMaxFeasibleSet.cpp  computeMaxFeasibleSet.h  cspaceMorph.cpp  cspaceMorph.h  helper.cpp  helper.h  main.cpp  removeSupports.cpp  removeSupports.h
supports/models/images/: Part (I-shaped) - 1024^2.tif  Tool (sharp) - 1024^2.tif
tolerance/: CMakeLists.txt  main.cpp
xrx/doc/: xrx_sow.txt  xrx_sow.txt~
