cmake_minimum_required(VERSION 2.6)
project(json)
message("Project: json")
#include_directories(${PROJECT_SOURCE_DIR})
include_directories(${PROJECT_SOURCE_DIR}/..)
#add_library(json_reader STATIC ${PROJECT_SOURCE_DIR}/../json_reader.cpp)
#add_library(json_value  STATIC ${PROJECT_SOURCE_DIR}/../json_value.cpp)
#add_library(json_writer STATIC ${PROJECT_SOURCE_DIR}/../json_writer.cpp)
#add_library(json json_reader json_value json_writer)
file(GLOB SOURCES ${PROJECT_SOURCE_DIR}/../json*.cpp)
message("Files: ${SOURCES}")
add_library(json ${SOURCES})
